obtaining uik results

--- a/gnhq.info/php/Config/res412.ini
+++ b/gnhq.info/php/Config/res412.ini
@@ -5,3 +5,6 @@ rootPage="region/region/moscow_city?action=show&root=1000149&tvd=100100028713457
 
 lowerIKIndicator="Нижестоящие избирательные комиссии"
 lowerIKSelectIndicator="select name=\"gs\""
+
+totalTableIndicator="Число избирателей, внесенных в список избирателей"
+resultTableIndicator="cellpadding"
