--- a/gnhq.info/php/Config/res412.ini
+++ b/gnhq.info/php/Config/res412.ini
@@ -8,3 +8,4 @@ lowerIKSelectIndicator="select name=\"gs\""
 
 totalTableIndicator="Число избирателей, внесенных в список избирателей"
 resultTableIndicator="cellpadding"
+useCache=1
