--- a/gnhq.info/php/Config/gn412.ini
+++ b/gnhq.info/php/Config/gn412.ini
@@ -1,4 +1,4 @@
 site="http://nabludatel.org/"
-rootPage="vybory-v-gosdumu-itogi/"
-useCache=1
+rootPage="otchety-nablyudatelej-vybory-v-gosdumu/"
+useCache=0
 reportTableIndicator='Округ,Район'
