--- a/gnhq.info/php/Config/krasnoyarsk.ini
+++ b/gnhq.info/php/Config/krasnoyarsk.ini
@@ -1,4 +1,8 @@
-rootPage="http://www.vybory.izbirkom.ru/region/izbirkom?action=show&global=1&vrn=100100031793505&region=0&prver=0&pronetvd=null"
+rootPage="http://www.krasnoyarsk.vybory.izbirkom.ru/region/region/krasnoyarsk?action=show&root=1&tvd=424422086839&vrn=424422086835&region=24&global=null&sub_region=24&prver=0&pronetvd=null&vibid=424422086839&type=234"
+fullName="Красноярский край"
+num="24"
+population="5281164"
+
 site=""
 
 regionIndicator="сайт избирательной комиссии субъекта Российской Федерации"
