формирование js по регионам и тикам

--- a/gnhq.info/php/Config/krasnoyarsk.ini
+++ b/gnhq.info/php/Config/krasnoyarsk.ini
@@ -1,5 +1,5 @@
 rootPage="http://www.krasnoyarsk.vybory.izbirkom.ru/region/region/krasnoyarsk?action=show&root=1&tvd=424422086839&vrn=424422086835&region=24&global=null&sub_region=24&prver=0&pronetvd=null&vibid=424422086839&type=234"
-fullName="Красноярский край"
+fullName="Красноярск"
 num="24"
 population="5281164"
 
