--- a/gnhq.info/php/Config/omsk.ini
+++ b/gnhq.info/php/Config/omsk.ini
@@ -1,4 +1,4 @@
-rootPage="http://www.omsk.vybory.izbirkom.ru/region/omsk?action=show&root_a=null&vrn=455422074946&region=55&global=&type=0&prver=0&pronetvd=null"
+rootPage="http://www.omsk.vybory.izbirkom.ru/region/region/omsk?action=show&root=1&tvd=455422074950&vrn=455422074946&region=55&global=&sub_region=55&prver=0&pronetvd=null&vibid=455422074950&type=234"
 name="Омск"
 num="55"
 population="0"
